--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,4 +5,4 @@ entries:
       - title: currently in Vienna, Austria
       - title: instagram: @ionicwae
       - title: linkedin
-        url: https://www.linkedin.com/in/romanbikbulatov/
+ #       url: https://www.linkedin.com/in/romanbikbulatov/
