--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,7 +1,12 @@
 entries:
-  - title: info
+  - title: me
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
+      - title: 21 y.o.
+      - title: location: vienna, austria
         url: https://github.com/riggraz/no-style-please
       - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+  - title: education
+    entries:
+      - title: University of Warwick
+      - title: BEng Computer Systems Engineering
+      - title: 2024-2027
